Complete branding update: fix all remaining references
Fixed:
- ✅ web/package.json: devkit-web → blueprintkit-web
- ✅ web/package.json: DevKit description → BlueprintKit
- ✅ cli/package.json: homepage devkit.dev → blueprintkit.dev
- ✅ cli/README.md: DevKit → BlueprintKit (all instances)
- ✅ cli/README.md: devkit.dev links → blueprintkit.dev
- ✅ templates/README.md: DevKit → BlueprintKit
- ✅ templates/README.md: devkit init → blueprintkit init
- ✅ templates/README.md: GitHub URLs updated
- ✅ CLI rebuilt with new package.json

All public-facing files now correctly reference BlueprintKit.

--- a/cli/package.json
+++ b/cli/package.json
@@ -45,7 +45,7 @@
   "bugs": {
     "url": "https://github.com/vickcoo/devkit/issues"
   },
-  "homepage": "https://devkit.dev",
+  "homepage": "https://blueprintkit.dev",
   "dependencies": {
     "commander": "^11.1.0",
     "inquirer": "^8.2.5",
