fix(cli): update all remaining references to BlueprintKit
Complete branding update:
- Update package.json keywords, repository, and bugs URLs
- Update README GitHub links
- Change config directory from .devkit to .blueprintkit
- Update all command examples in config and list commands

All references now correctly use BlueprintKit branding.

--- a/cli/package.json
+++ b/cli/package.json
@@ -22,7 +22,7 @@
     "template",
     "boilerplate",
     "generator",
-    "devkit",
+    "blueprintkit",
     "nextjs",
     "react",
     "vue",
@@ -40,10 +40,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vickcoo/devkit.git"
+    "url": "https://github.com/vickcoo/BlueprintKit.git"
   },
   "bugs": {
-    "url": "https://github.com/vickcoo/devkit/issues"
+    "url": "https://github.com/vickcoo/BlueprintKit/issues"
   },
   "homepage": "https://blueprintkit.dev",
   "dependencies": {
